@@ -1,3 +1,8 @@
+Thu Jan 27 13:54:08 1994  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)
+
+	* linker.c (generic_link_add_symbol_list): If symbol is common,
+	set the BSF_OLD_COMMON flag.
+
 Wed Jan 26 13:47:15 1994  David J. Mackenzie  (djm@thepub.cygnus.com)
 
 	* format.c (bfd_check_format_matches): Put the new entry in the
